// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwoColumn Allows for custom gutter values 1`] = `
.c1 {
  -webkit-flex-basis: 100%;
  -ms-flex-basis: 100%;
  flex-basis: 100%;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  overflow: hidden;
  position: relative;
}

.c2 {
  -webkit-flex-basis: 100%;
  -ms-flex-basis: 100%;
  flex-basis: 100%;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  overflow: hidden;
  position: relative;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (min-width:992px) {
  .c1 {
    -webkit-flex-basis: calc(50% - 25px);
    -ms-flex-basis: calc(50% - 25px);
    flex-basis: calc(50% - 25px);
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
  }
}

@media (min-width:992px) {
  .c2 {
    -webkit-flex-basis: calc(50% - 25px);
    -ms-flex-basis: calc(50% - 25px);
    flex-basis: calc(50% - 25px);
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    order={1}
  >
    <div>
      foo
    </div>
  </div>
  <div
    className="c2"
    order={2}
  >
    <div>
      bar
    </div>
  </div>
</div>
`;

exports[`TwoColumn Renders the column correct with custom named breakpoint 1`] = `
.c1 {
  -webkit-flex-basis: 100%;
  -ms-flex-basis: 100%;
  flex-basis: 100%;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
  overflow: hidden;
  position: relative;
}

.c2 {
  -webkit-flex-basis: 100%;
  -ms-flex-basis: 100%;
  flex-basis: 100%;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  overflow: hidden;
  position: relative;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (min-width:768px) {
  .c1 {
    -webkit-flex-basis: calc(30% - 10px);
    -ms-flex-basis: calc(30% - 10px);
    flex-basis: calc(30% - 10px);
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
  }
}

@media (min-width:768px) {
  .c2 {
    -webkit-flex-basis: calc(70% - 20px);
    -ms-flex-basis: calc(70% - 20px);
    flex-basis: calc(70% - 20px);
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    order={3}
  >
    <div>
      foo
    </div>
  </div>
  <div
    className="c2"
    order={2}
  >
    <div>
      bar
    </div>
  </div>
</div>
`;

exports[`TwoColumn Will update the order of the columns when mobileFlip is passed 1`] = `
.c2 {
  -webkit-flex-basis: 100%;
  -ms-flex-basis: 100%;
  flex-basis: 100%;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  overflow: hidden;
  position: relative;
}

.c1 {
  -webkit-flex-basis: 100%;
  -ms-flex-basis: 100%;
  flex-basis: 100%;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  overflow: hidden;
  position: relative;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (min-width:992px) {
  .c2 {
    -webkit-flex-basis: calc(50% - 25px);
    -ms-flex-basis: calc(50% - 25px);
    flex-basis: calc(50% - 25px);
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
  }
}

@media (min-width:992px) {
  .c1 {
    -webkit-flex-basis: calc(50% - 25px);
    -ms-flex-basis: calc(50% - 25px);
    flex-basis: calc(50% - 25px);
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    order={2}
  >
    <div>
      foo
    </div>
  </div>
  <div
    className="c2"
    order={1}
  >
    <div>
      bar
    </div>
  </div>
</div>
`;

exports[`TwoColumn allows custom columnConfig to change column values 1`] = `
.c1 {
  -webkit-flex-basis: 100%;
  -ms-flex-basis: 100%;
  flex-basis: 100%;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
  overflow: hidden;
  position: relative;
}

.c2 {
  -webkit-flex-basis: 100%;
  -ms-flex-basis: 100%;
  flex-basis: 100%;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  overflow: hidden;
  position: relative;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (min-width:992px) {
  .c1 {
    -webkit-flex-basis: calc(30% - 10px);
    -ms-flex-basis: calc(30% - 10px);
    flex-basis: calc(30% - 10px);
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
  }
}

@media (min-width:992px) {
  .c2 {
    -webkit-flex-basis: calc(70% - 20px);
    -ms-flex-basis: calc(70% - 20px);
    flex-basis: calc(70% - 20px);
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    order={3}
  >
    <div>
      foo
    </div>
  </div>
  <div
    className="c2"
    order={2}
  >
    <div>
      bar
    </div>
  </div>
</div>
`;

exports[`TwoColumn renders correctly 1`] = `
.c1 {
  -webkit-flex-basis: 100%;
  -ms-flex-basis: 100%;
  flex-basis: 100%;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  overflow: hidden;
  position: relative;
}

.c2 {
  -webkit-flex-basis: 100%;
  -ms-flex-basis: 100%;
  flex-basis: 100%;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  overflow: hidden;
  position: relative;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (min-width:992px) {
  .c1 {
    -webkit-flex-basis: calc(50% - 5px);
    -ms-flex-basis: calc(50% - 5px);
    flex-basis: calc(50% - 5px);
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
  }
}

@media (min-width:992px) {
  .c2 {
    -webkit-flex-basis: calc(50% - 5px);
    -ms-flex-basis: calc(50% - 5px);
    flex-basis: calc(50% - 5px);
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    order={1}
  >
    <div>
      foo
    </div>
  </div>
  <div
    className="c2"
    order={2}
  >
    <div>
      bar
    </div>
  </div>
</div>
`;
